fixing bottom spacing

--- a/src/routes/HomePage/styles.module.css
+++ b/src/routes/HomePage/styles.module.css
@@ -2,5 +2,4 @@
   height: 100%;
   background-image: url('../../images/loginPageBg.png');
   background-size: 20%;
-  margin-top: -60px;
 }
